# apertium-isl-rus

./: .gitattributes  .gitignore  Makefile.am  apertium-isl-rus.isl-rus.dix  configure.ac  modes.xml
test/: isl-rus-biltrans-expected.txt  isl-rus-chunker-expected.txt  isl-rus-disam-expected.txt  isl-rus-generator-expected.txt  isl-rus-input.txt  isl-rus-morph-expected.txt  isl-rus-postchunk-expected.txt  isl-rus-pretransfer-expected.txt  rus-isl-biltrans-expected.txt  rus-isl-disam-expected.txt  rus-isl-generator-expected.txt  rus-isl-input.txt  rus-isl-interchunk-expected.txt  rus-isl-morph-expected.txt  rus-isl-postchunk-expected.txt  tests.json
